# fin123-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  POD_BOUNDARY.md  README.md  pyproject.toml
.github/workflows/: _build-binaries.yml  ci.yml  pypi-release.yml  release.yml
benchmarks/: row_scaling.py
benchmarks/results/: row_scaling.csv
demo/: README.md  output_example.txt  run_demo.sh  terminal_commands.txt
demos/: __init__.py
demos/ai_governance_demo/: README.md  ai_generated_plugin_example.py  compliance_report_output.json  demo_config.yaml  plugin_validator.py  run.py  sample_model.yaml
demos/batch_sweep_demo/: README.md  __init__.py  batch_manifest.json  run.py
demos/data_guardrails_demo/: README.md  __init__.py
demos/deterministic_build_demo/: README.md  __init__.py  run.py
docs/: CI.md  CLI_CONTRACT_SHA256.txt  CLI_HELP_SHA256.txt  CLI_SPEC.md  DEMO_TEMPLATES_AUDIT.md  INSTALL.md  OPERATIONS.md  RUNBOOK.md  concepts.md  excel_import_export.md  formulas_and_views.md  terminal.md  worksheets.md
fin123_public/: index.html
ops/claude/: install_and_verify.md  release_readiness_review.md  run_smoke_tests.md  (+1 more)
packaging/: fin123_core.spec
scripts/: bootstrap_venv.sh  build_macos.sh  build_windows.ps1  checksums.py  cli_contract_check.py  release_smoke.sh  run_acceptance_suite.sh  smoke_test.sh
src/fin123/: batch.py  (+15 more)
tests/: README.md  test_ai_governance_demo.py  test_approvals.py  test_assertions_verify.py  test_batch_build.py  test_demos.py  test_demos_import.py  test_diff.py  test_formula_functions.py  test_hardening.py  test_hardening_v2.py  test_import_upload.py  test_incidents_pipeline.py  test_logging.py  test_param_binding.py  test_params_hash.py  test_phase2.py  test_phase3_formulas.py  test_phase42_hardening.py  test_phase4_ui.py  test_phase5_multisheet.py  test_phase6_crosssheet.py  test_phase7_model.py  test_phase81_cellref.py  test_phase8_import.py  test_row_col_insert.py  test_smoke.py  test_status_ribbon.py  test_templates.py  test_view_transforms.py  test_worksheet_cli.py  test_worksheet_compiled.py  test_worksheet_compiler.py  test_worksheet_eval_row.py  test_worksheet_hardening.py  test_worksheet_spec.py  test_worksheet_types.py  test_worksheet_ui.py  test_worksheet_view_table.py  test_worksheet_viewer.py  (+1 more)
(+70 files in other folders)
