[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin123-core"
version = "0.3.2"
description = "Polars-backed financial workbook engine with local browser UI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{ name = "fin123 contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "lark>=1.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
    "httpx>=0.24",
    "openpyxl>=3.1",
]

[project.scripts]
fin123 = "fin123.cli_core:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fin123"]

[tool.hatch.build.targets.sdist]
include = ["src/fin123/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not pod' --ignore=tests/pod"
markers = [
    "pod: tests requiring fin123-pod modules (fin123.cli, fin123.sync, fin123.releases, fin123.workflows)",
]
